<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descr">TRY ZOOLTAN, THE FASTEST AND EASIEST WAY TO DELIVERY</string>
    <string name="forgot">Forgot password</string>
    <string name="login">LOG IN</string>
    <string name="registration_caps">REGISTRATION</string>
    <string name="call_support_descr">To use this app you need to have verified account. Call support for further information please.</string>
    <string name="ok">Ok</string>
    <string name="call_support">Call support</string>
    <string name="recovery">PASSWORD RECOVERY</string>
    <string name="to_recover">To recover your password, please call the office</string>
    <string name="call_office">CALL THE OFFICE</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="distance_to">Distance to the pickup location:</string>
    <string name="distance_from">Distance from pickup to destination:</string>
    <string name="comments">Comments:</string>
    <string name="pick_up_list">PICK UP LIST</string>
    <string name="profile">PROFILE</string>
    <string name="information">INFORMATION</string>
    <string name="statistic">STATISTIC</string>
    <string name="log_out">LOG OUT</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="cancel">CANCEL</string>
    <string name="new_caps">NEW</string>
    <string name="active_caps">ACTIVE</string>
    <string name="history_caps">HISTORY</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="month">MONTH</string>
    <string name="income">Income</string>
    <string name="all_income">All income</string>
    <string name="your_rating">Your rating</string>
    <string name="deliveries">Deliveries</string>
    <string name="all_deliveries">All deliveries</string>
</resources>
