<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shmtzh.myapplication.fragment.feed.FeedFragment">

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/day_btn"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/day"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/week_btn"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/week"
            android:textColor="@color/orange" />


        <Button
            android:id="@+id/month_btn"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/month"
            android:textColor="@color/orange" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:id="@+id/income"
                android:text="0 AED"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/income"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/all_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:lines="1"
                android:text="214352"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/all_income"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:padding="10dp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:text="4"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/your_rating"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/deliveries"
                android:lines="1"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/deliveries"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/all_deliveries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:lines="1"
                android:text="11"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:text="@string/all_deliveries"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
