<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shmtzh.myapplication.fragment.feed.FeedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/tabs"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:id="@+id/new_btn"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/new_caps"
            android:textColor="@color/orange" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/active_btn"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/active_caps"
            android:textColor="@color/orange" />


        <Button
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:id="@+id/history_btn"
            android:layout_weight="1"
            android:background="@drawable/borders_black"
            android:text="@string/history_caps"
            android:textColor="@color/orange" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_below="@id/tabs"
        android:id="@+id/new_recycler_view"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_below="@id/tabs"
        android:visibility="gone"
        android:id="@+id/history_recycler_view"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_below="@id/tabs"
        android:id="@+id/active_recycler_view"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
