<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shmtzh.myapplication.fragment.LoginFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/main_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:lines="3"
        android:text="@string/descr"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/teleph_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_descr"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teleph_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/borders_trans"
        android:text="@string/registration_caps"
        android:textColor="@color/orange"
        android:textSize="18sp" />

</RelativeLayout>
