<?xml version="1.0" encoding="utf-8"?>
<com.jeremyfeinstein.slidingmenu.lib.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sliding="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slidingmenulayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:fitsSystemWindows="true"
    sliding:behindWidth="10dp"
    sliding:fadeEnabled="true"
    sliding:touchModeBehind="margin"
    sliding:shadowDrawable="@color/orange"
    sliding:selectorEnabled="true"
    sliding:shadowWidth="10dp"
    sliding:touchModeAbove="fullscreen">

    <RelativeLayout
        android:id="@+id/pick_up_container"
        android:layout_width="wrap_content"
        android:onClick="goToPickUpList"
        android:layout_height="70dp"
        android:layout_below="@id/container"
        android:layout_marginTop="40dp">

        <ImageButton
            android:id="@+id/pick_up_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/pick_up" />

        <TextView
            android:id="@+id/pick_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/pick_up_image"
            android:layout_toRightOf="@id/pick_up_image"
            android:text="@string/pick_up_list"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_container"
        android:onClick="goToProfile"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@id/pick_up_container">

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/profile_image"
            android:layout_toRightOf="@id/profile_image"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/information_container"
        android:layout_width="wrap_content"
        android:onClick="goToInformation"
        android:layout_height="70dp"
        android:layout_below="@id/profile_container">

        <ImageButton
            android:id="@+id/information_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/info" />

        <TextView
            android:id="@+id/information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/information_image"
            android:layout_toRightOf="@id/information_image"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/statistic_container"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:onClick="goToStatistic"
        android:layout_below="@id/information_container">

        <ImageButton
            android:id="@+id/statistic_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/statistic" />

        <TextView
            android:id="@+id/statistic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/statistic_image"
            android:layout_toRightOf="@id/statistic_image"
            android:text="@string/statistic"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <Space
        android:id="@+id/container_space"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/statistic_container" />

    <RelativeLayout
        android:id="@+id/log_out_container"
        android:layout_width="wrap_content"
        android:onClick="goToLogOut"
        android:layout_height="70dp"
        android:layout_below="@id/container_space">

        <ImageButton
            android:id="@+id/log_out_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/out" />

        <TextView
            android:id="@+id/log_out_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/log_out_image"
            android:layout_toRightOf="@id/log_out_image"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/orange"
        android:text="@string/call_support"
        android:onClick="callSupport"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal" />

</com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>


    <!--sliding:viewAbove="@layout/YOUR_ABOVE_VIEW"--><!--sliding:viewBehind="@layout/YOUR_BEHIND_BEHIND"--><!--sliding:behindOffset="@dimen/YOUR_OFFSET"--><!--sliding:shadowDrawable="@drawable/YOUR_SHADOW"--><!--sliding:selectorDrawable="@drawable/YOUR_SELECTOR"--><!--sliding:behindScrollScale="@dimen/YOUR_SCALE"-->
