<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginStart="6dp"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/letter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="6dp"
            android:src="@drawable/letter" />

        <TextView
            android:id="@+id/distance_to"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/letter"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/distance_to"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/to_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_below="@id/distance_to"
            android:gravity="center_vertical"
            android:text="Clгster Mr. Robenson"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/distance_from"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/to_name"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/distance_from"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/from_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_below="@id/distance_from"
            android:gravity="center_vertical"
            android:text="Boomerang Little Pony"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_below="@id/from_name"
            android:gravity="center_vertical"
            android:text="@string/comments"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/index"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|end|right"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/to_distance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/index"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|end|right"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/from_distance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/to_distance"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|end|right"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/comments_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/from_distance"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|end|right"
            android:textColor="@color/orange" />
    </RelativeLayout>

</LinearLayout>
</android.support.v7.widget.CardView>